# MoneyGuardBot

./: README.md  pyproject.toml  scripts.txt
backend/: alembic.ini  expenses.db
backend/alembic/versions/: c746241d590b_init.py
backend/app/: crud.py  currency.py  database.py  dependencies.py  main.py
bot/: bot.py
